Add config.json settings, implement random seeds

--- a/PollenSprites/PollenSprites.csproj
+++ b/PollenSprites/PollenSprites.csproj
@@ -61,6 +61,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ModConfig.cs" />
+    <Compile Include="SeedManager.cs" />
     <Compile Include="PollenSprite.cs" />
     <Compile Include="ModEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
