Add support for Generic Mod Config Menu (GMCM)

--- a/PollenSprites/PollenSprites.csproj
+++ b/PollenSprites/PollenSprites.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Compatibility\GMCM.cs" />
     <Compile Include="ModConfig.cs" />
     <Compile Include="SeedManager.cs" />
     <Compile Include="PollenSprite.cs" />
