Rewrite for SDV 1.6

--- a/[FTM] PollenSprites/manifest.json
+++ b/[FTM] PollenSprites/manifest.json
@@ -1,10 +1,10 @@
 {
    "Name": "[FTM] Pollen Sprites",
    "Author": "Esca",
-   "Version": "1.1.0",
-   "Description": "Spawns Pollen Sprites in various locations on windy days in spring.",
+   "Version": "1.1.1",
+   "Description": "Spawns Pollen Sprites in various locations on windy days in spring and fall.",
    "UniqueID": "Esca.PollenSpritesFTM",
-   "MinimumApiVersion": "3.0.0",
+   "MinimumApiVersion": "4.0.0",
    "UpdateKeys": ["Nexus:6149", "GitHub:Esca-MMC/PollenSprites", "ModDrop:790268"],
    "ContentPackFor": {
       "UniqueID": "Esca.FarmTypeManager",
