--- a/[FTM] PollenSprites/manifest.json
+++ b/[FTM] PollenSprites/manifest.json
@@ -1,8 +1,8 @@
 {
    "Name": "[FTM] Pollen Sprites",
    "Author": "Esca",
-   "Version": "1.1.1",
-   "Description": "Spawns Pollen Sprites in various locations on windy days in spring and fall.",
+   "Version": "2.0.0",
+   "Description": "Spawns Pollen Sprites in various locations on windy days.",
    "UniqueID": "Esca.PollenSpritesFTM",
    "MinimumApiVersion": "4.0.0",
    "UpdateKeys": ["Nexus:6149", "GitHub:Esca-MMC/PollenSprites", "ModDrop:790268"],
