Fix CP asset warning, update nuget

--- a/[CP] PollenSprites/[CP] PollenSprites.csproj
+++ b/[CP] PollenSprites/[CP] PollenSprites.csproj
@@ -8,11 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.4.0-beta.20210813" />
+    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="assets\Pollen Sprite.png">
+    <None Update="assets\PollenSprite_fall.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="assets\PollenSprite_spring.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="content.json">
